kubernetes-objects/k8s-obj-deploy.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: "7"
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"extensions/v1beta1","kind":"Deployment","metadata":{"annotations":{},"name":"gc-example-b","namespace":"grupo-conocimiento"},"spec":{"replicas":1,"template":{"metadata":{"labels":{"app":"gc-example-b","version":"v1"}},"spec":{"containers":[{"image":"gcr.io/gke-inigo-1-229519/gc-example-b:1.0.0","imagePullPolicy":"IfNotPresent","name":"gc-example-b","ports":[{"containerPort":8080}]}]}}}}
  creationTimestamp: 2019-02-08T01:22:05Z
  generation: 7
  labels:
    app: gc-example-b
    version: v1
  name: gc-example-b
  namespace: grupo-conocimiento
  resourceVersion: "3048494"
  selfLink: /apis/extensions/v1beta1/namespaces/grupo-conocimiento/deployments/gc-example-b
  uid: f21a7d2b-2b3f-11e9-b70a-42010a8002be
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: gc-example-b
      version: v1
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: gc-example-b
        version: v1
    spec:
      containers:
      - env:
        - name: EXAMPLE_HOST_URL
          value: http://gc-example-a:8000
        image: gcr.io/gke-inigo-1-229519/gc-example-b:1.0.0
        imagePullPolicy: IfNotPresent
        name: gc-example-b
        ports:
        - containerPort: 8080
          protocol: TCP
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
status:
  availableReplicas: 1
  conditions:
  - lastTransitionTime: 2019-02-08T01:22:05Z
    lastUpdateTime: 2019-02-08T01:22:05Z
    message: Deployment has minimum availability.
    reason: MinimumReplicasAvailable
    status: "True"
    type: Available
  - lastTransitionTime: 2019-02-08T01:22:05Z
    lastUpdateTime: 2019-02-08T20:08:17Z
    message: ReplicaSet "gc-example-b-7f766f5cfc" has successfully progressed.
    reason: NewReplicaSetAvailable
    status: "True"
    type: Progressing
  observedGeneration: 7
  readyReplicas: 1
  replicas: 1
  updatedReplicas: 1
