kubernetes-objects/k8s-obj-svc.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"v1","kind":"Service","metadata":{"annotations":{},"labels":{"app":"gc-example-b"},"name":"gc-example-b","namespace":"grupo-conocimiento"},"spec":{"ports":[{"name":"http","port":8000,"targetPort":8080}],"selector":{"app":"gc-example-b"}}}
  creationTimestamp: 2019-02-08T01:22:05Z
  labels:
    app: gc-example-b
  name: gc-example-b
  namespace: grupo-conocimiento
  resourceVersion: "2898630"
  selfLink: /api/v1/namespaces/grupo-conocimiento/services/gc-example-b
  uid: f1e005fa-2b3f-11e9-b70a-42010a8002be
spec:
  clusterIP: 10.11.246.184
  ports:
  - name: http
    port: 8000
    protocol: TCP
    targetPort: 8080
  selector:
    app: gc-example-b
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}
